--- a/www/css/grid.css
+++ b/www/css/grid.css
@@ -412,7 +412,7 @@
   .col-md-offset-12 {
     margin-left: 100%; } }
 
-@media (min-width: 1152px) {
+@media (min-width: 1470px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left; }
   .col-lg-1 {
@@ -593,7 +593,7 @@
   .visible-sm-inline-block {
     display: inline-block !important; } }
 
-@media (min-width: 1008px) and (max-width: 1151px) {
+@media (min-width: 1008px) and (max-width: 1470px) {
   .visible-md {
     display: block !important; }
   table.visible-md {
@@ -604,15 +604,15 @@
   td.visible-md {
     display: table-cell !important; } }
 
-@media (min-width: 1008px) and (max-width: 1151px) {
+@media (min-width: 1008px) and (max-width: 1470px) {
   .visible-md-block {
     display: block !important; } }
 
-@media (min-width: 1008px) and (max-width: 1151px) {
+@media (min-width: 1008px) and (max-width: 1470px) {
   .visible-md-inline {
     display: inline !important; } }
 
-@media (min-width: 1008px) and (max-width: 1151px) {
+@media (min-width: 1008px) and (max-width: 1470px) {
   .visible-md-inline-block {
     display: inline-block !important; } }
 
@@ -824,7 +824,7 @@ html, body {
     .container {
       padding-left: 9px;
       padding-right: 9px;
-      overflow: visible;
+      overflow-x: visible;
       width: 768px; } }
   @media (min-width: 1008px) {
     .container {
@@ -836,6 +836,7 @@ html, body {
     .container {
       padding-left: 14px;
       padding-right: 14px;
+      overflow-x: visible;
       width: 1008px; } }
   @media (min-width: 1152px) {
     .container {
@@ -847,7 +848,26 @@ html, body {
     .container {
       padding-left: 16px;
       padding-right: 16px;
+      overflow-x: visible;
       width: 1152px; } }
+  @media (min-width: 1270px) {
+    .container {
+      padding-left: 16px;
+      padding-right: 16px;
+      overflow-x: visible;
+      width: 1252px; } }
+  @media (min-width: 1470px) {
+    .container {
+      padding-left: 16px;
+      padding-right: 16px;
+      overflow-x: visible;
+      width: 1452px; } }
+  @media (min-width: 1670px) {
+    .container {
+      padding-left: 16px;
+      padding-right: 16px;
+      overflow-x: visible;
+      width: 1652px; } }
   @media (min-width: 1872px) {
     .container {
       padding-left: 0;
@@ -858,6 +878,7 @@ html, body {
     .container {
       padding-left: 16px;
       padding-right: 16px;
+      overflow-x: visible;
       width: 1872px; } }
 
 @media (min-width: 768px) {
