--- a/www/css/main.css
+++ b/www/css/main.css
@@ -57,8 +57,7 @@ a:focus {
 a,
 input,
 button,
-textarea,
-.chard-nav__item {
+textarea {
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
@@ -209,7 +208,7 @@ textarea {
 }
 @media screen and (max-width: 1470px) {
   .header-menu {
-    margin-top: 40px;
+    margin-top: 20px;
   }
 }
 .header-menu__item {
@@ -747,41 +746,63 @@ textarea {
   border-bottom: 1px solid #d7d7d7;
   overflow: hidden;
   vertical-align: top;
+  /*&.out {
+        .features-item__desc_place {
+            animation: animatedFeatures_place_out 0.7s alternate-reverse;
+            animation-fill-mode: forwards;
+        }
+        .features-item__desc_structure {
+            animation: animatedFeatures_structure 0.7s reverse;
+            animation-fill-mode: forwards;
+        }
+        .features-item__desc_parks {
+            animation: animatedFeatures_parks 0.7s reverse;
+            animation-fill-mode: forwards;
+        }
+        .features-item__desc_tech {
+            animation: animatedFeatures_tech 0.7s reverse;
+            animation-fill-mode: forwards;
+        }
+        .features-item__desc_comfort {
+            animation: animatedFeatures_comfort 0.7s reverse;
+            animation-fill-mode: forwards;
+        }
+    }*/
 }
 .features-item:last-child {
   border-right: 0;
 }
-.features-item.active .features-item__desc_place {
-  -webkit-animation: animatedFeatures_place 0.7s linear alternate;
-          animation: animatedFeatures_place 0.7s linear alternate;
+.features-item.over .features-item__desc_place {
+  -webkit-animation: animatedFeatures_place 0.7s normal;
+          animation: animatedFeatures_place 0.7s normal;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
-.features-item.active .features-item__desc_structure {
-  -webkit-animation: animatedFeatures_structure 0.7s linear alternate;
-          animation: animatedFeatures_structure 0.7s linear alternate;
+.features-item.over .features-item__desc_structure {
+  -webkit-animation: animatedFeatures_structure 0.7s normal;
+          animation: animatedFeatures_structure 0.7s normal;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
-.features-item.active .features-item__desc_parks {
-  -webkit-animation: animatedFeatures_parks 0.7s linear alternate;
-          animation: animatedFeatures_parks 0.7s linear alternate;
+.features-item.over .features-item__desc_parks {
+  -webkit-animation: animatedFeatures_parks 0.7s normal;
+          animation: animatedFeatures_parks 0.7s normal;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
-.features-item.active .features-item__desc_tech {
-  -webkit-animation: animatedFeatures_tech 0.7s linear alternate;
-          animation: animatedFeatures_tech 0.7s linear alternate;
+.features-item.over .features-item__desc_tech {
+  -webkit-animation: animatedFeatures_tech 0.7s normal;
+          animation: animatedFeatures_tech 0.7s normal;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
-.features-item.active .features-item__desc_comfort {
-  -webkit-animation: animatedFeatures_comfort 0.7s linear alternate;
-          animation: animatedFeatures_comfort 0.7s linear alternate;
+.features-item.over .features-item__desc_comfort {
+  -webkit-animation: animatedFeatures_comfort 0.7s normal;
+          animation: animatedFeatures_comfort 0.7s normal;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
-.features-item.active .features-item__pattern {
+.features-item:hover .features-item__pattern {
   -webkit-transform: translate(0, 0);
       -ms-transform: translate(0, 0);
           transform: translate(0, 0);
@@ -794,6 +815,10 @@ textarea {
   opacity: 1;
   padding: 0 40px 0px;
   background-repeat: no-repeat;
+  -webkit-transition: -webkit-transform 0.3s 0.1s;
+  transition: -webkit-transform 0.3s 0.1s;
+  transition: transform 0.3s 0.1s;
+  transition: transform 0.3s 0.1s, -webkit-transform 0.3s 0.1s;
 }
 @media screen and (max-width: 1470px) {
   .features-item__desc {
@@ -811,32 +836,24 @@ textarea {
       -ms-transform: translate(0, -60px);
           transform: translate(0, -60px);
   margin-bottom: -10px;
-  -webkit-transition: translate 0.2s 1s;
-  transition: translate 0.2s 1s;
 }
 .features-item__desc_parks {
   -webkit-transform: translate(0, -95px);
       -ms-transform: translate(0, -95px);
           transform: translate(0, -95px);
   margin-bottom: -45px;
-  -webkit-transition: translate 0.2s 1s;
-  transition: translate 0.2s 1s;
 }
 .features-item__desc_tech {
   -webkit-transform: translate(0, -84px);
       -ms-transform: translate(0, -84px);
           transform: translate(0, -84px);
   margin-bottom: -34px;
-  -webkit-transition: translate 0.2s 1s;
-  transition: translate 0.2s 1s;
 }
 .features-item__desc_comfort {
   -webkit-transform: translate(0, -90px);
       -ms-transform: translate(0, -90px);
           transform: translate(0, -90px);
   margin-bottom: -40px;
-  -webkit-transition: translate 0.2s 1s;
-  transition: translate 0.2s 1s;
 }
 .features-item__image {
   display: block;
