--- a/www/less/main.less
+++ b/www/less/main.less
@@ -192,8 +192,13 @@ input[type="text"], textarea {
     left: 0;
     right: 0;
     background-color: @white-color;
-    padding: 25px 0 20px;
     z-index: 1000;
+}
+.header-main {
+    position: relative;
+    padding: 25px 0 20px;
+    z-index: 100;
+    background-color: @white-color;
 }
 .header-logo {
     a {
@@ -269,6 +274,7 @@ input[type="text"], textarea {
     &.active {
         opacity: 1;
         transform: translate(0, 0);
+        z-index: 10;
     }
 }
 .header-submenu__inner {
@@ -391,6 +397,7 @@ input[type="text"], textarea {
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     color: @white-color;
     height: 800px;
     &::before {
@@ -476,7 +483,6 @@ input[type="text"], textarea {
         font-size: 16px;
         white-space: nowrap;
         text-transform: uppercase;
-        padding-left: 126px;
         position: absolute;
         bottom: 0;
         width: 100px;
@@ -538,6 +544,9 @@ input[type="text"], textarea {
         }
     }
 }
+.media-control__image {}
+.media-control__name {}
+
 .media-control__map {
     background-image: url('../images/media-marker.svg');
     &:hover, &:focus, &:active {
@@ -856,9 +865,17 @@ input[type="text"], textarea {
         border: 1px solid #ababab;
         margin: 60px 0 30px;
     }
+    a {
+        color: #252525;
+        text-decoration: none;
+    }
     &:hover, &:focus, &:active {
         background-color: @link-color;
         color: @white-color;
+        a {
+            color: @white-color;
+            text-decoration: none;
+        }
         .apartament-options__price {
             span {
                 color: @white-color;
@@ -868,6 +885,18 @@ input[type="text"], textarea {
             input[type="text"] {
                 background-color: transparent;
                 color: @white-color;
+                &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+                  color: #878ec6;
+                }
+                &::-moz-placeholder { /* Firefox 19+ */
+                  color: #878ec6;
+                }
+                &:-ms-input-placeholder { /* IE 10+ */
+                  color: #878ec6;
+                }
+                &:-moz-placeholder { /* Firefox 18- */
+                  color: #878ec6;
+                }
             }
             .submit-border {
                 background-image: url('../images/input-pat-act.png');
@@ -888,6 +917,14 @@ input[type="text"], textarea {
 .apartament-options {
     display: block;
     margin-top: 70px;
+    &:hover, &:focus, &:active {
+        color: @link-color-yellow;
+        .apartament-options__price {
+            span {
+                color: @link-color-yellow;
+            }
+        }
+    }
     @media screen and (max-width: 1470px) {
         margin-top: 0;
     }
